# Liminal

./: .gitignore  LICENSE  README.md  config.yaml  network_example.html  pyproject.toml  rbfe_config.yaml  rbfe_runner.py
liminal/: __main__.py  analysis.py  commands.py  config.py  mapping.py  parameterize.py  system.py  utils.py
parameters/ING/: ING.frcmod  ING.lib
parameters/INI/: INI.frcmod  INI.lib
rbfe/: __init__.py  __main__.py  network.py  simulation.py  visualize.py
